Attempt to resolve string/int conversion error in api call

--- a/ansible/playbooks/register-host.yml
+++ b/ansible/playbooks/register-host.yml
@@ -337,14 +337,17 @@
           URL: {{ semaphore_url }}/api/project/{{ semaphore_project_id }}/tasks
           Body: {{ body_payload | to_nice_json }}
       vars:
-        body_payload:
-          template_id: "{{ bootstrap_template_id | int }}"
-          message: "Bootstrap {{ target_hostname }}"
-          limit: "{{ target_hostname }}"
-          params:
-            debug: false
-            dry_run: true
-            diff: false
+        body_payload: >
+          {
+            "template_id": {{ bootstrap_template_id | int }},
+            "message": "Bootstrap {{ target_hostname }}",
+            "limit": "{{ target_hostname }}",
+            "params": {
+              "debug": false,
+              "dry_run": true,
+              "diff": false
+            }
+          }
 
 
     - name: Trigger bootstrap playbook
@@ -355,14 +358,24 @@
           Authorization: "Bearer {{ semaphore_api_token }}"
           Content-Type: "application/json"
         body_format: json
-        body:
-          template_id: "{{ bootstrap_template_id | int }}"
-          message: "Bootstrap {{ target_hostname }}"
-          limit: "{{ target_hostname }}"
-          params:
-            debug: false
-            dry_run: true
-            diff: false
+        body: >
+          {
+            "template_id": {{ bootstrap_template_id | int }},
+            "message": "Bootstrap {{ target_hostname }}",
+            "limit": "{{ target_hostname }}",
+            "params": {
+              "debug": false,
+              "dry_run": true,
+              "diff": false
+            }
+          }
+        # template_id: "{{ bootstrap_template_id | int }}"
+        # message: "Bootstrap {{ target_hostname }}"
+        # limit: "{{ target_hostname }}"
+        # params:
+        #   debug: false
+        #   dry_run: true
+        #   diff: false
         timeout: "{{ semaphore_api_timeout }}"
         status_code: 201
         return_content: true
